Add HyperLearner Claude Code (security + worktrees)

--- a/hyperlearner/index.html
+++ b/hyperlearner/index.html
@@ -32,6 +32,11 @@ a.card:hover { border-color: #7c3aed; background: #1e1e3a; transform: translateY
 <div>Guide Cowork, Exercices, Cheatsheet</div>
 <div class="size">~30 pages • 29 KB</div>
 </a>
+<a class="card" href="claude-code/">
+<h2>⚡ Claude Code</h2>
+<div>CLI, Sécurité, Worktrees, Sous-agents, Hooks, Exercices</div>
+<div class="size">~60 pages • 64 KB</div>
+</a>
 </div>
 </div>
 </body>
