Update Claude Code & Cowork guides with mastery content
- Enriched claude-code/index.html with 8 comprehensive sections
  * Fundamentals, Commands, Advanced, Tips & Tricks
  * Best Practices, Integrations, Troubleshooting, Hidden Features
  * Added Cheatsheet section
  * 91 H2 sections, ~150 pages of content

- Enriched claude-cowork/index.html with 8 sections
  * Fundamentals, Setup & Config, Workflows
  * Tips & Tricks, Best Practices, Advanced
  * Code+Cowork Combo, Power Workflows
  * 81 H2 sections, ~80 pages of content

- Updated hyperlearner/index.html with new card entries
  * Updated sizes and descriptions
  * Better organization of guides

Source: ~/claude-code-cowork-mastery/ (22 MD files, 5454 lines)
Research date: Feb 27-28, 2026

--- a/hyperlearner/index.html
+++ b/hyperlearner/index.html
@@ -33,9 +33,14 @@ a.card:hover { border-color: #7c3aed; background: #1e1e3a; transform: translateY
 <div class="size">~30 pages • 29 KB</div>
 </a>
 <a class="card" href="claude-code/">
-<h2>⚡ Claude Code</h2>
-<div>CLI, Sécurité, Worktrees, Sous-agents, Hooks, Exercices</div>
-<div class="size">~60 pages • 64 KB</div>
+<h2>⚡ Claude Code Mastery</h2>
+<div>Fundamentals, Commands, Advanced, Tips, Best Practices, Integrations, Troubleshooting, Hidden Features</div>
+<div class="size">~150 pages • 95 KB</div>
+</a>
+<a class="card" href="claude-cowork/">
+<h2>🤝 Claude Cowork Mastery</h2>
+<div>Fundamentals, Setup, Workflows, Tips, Best Practices, Advanced, Synergies, Power Workflows</div>
+<div class="size">~80 pages • 77 KB</div>
 </a>
 </div>
 </div>
